unpackaged/main/default/objects/Comp_Adjustment__c/Comp_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Comp Adjustment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Comp Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comp Adjustments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>