unpackaged/main/default/objects/Comp_Adjustment__c/fields/Approved_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Role__c</fullName>
    <label>Approved By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>