unpackaged/main/default/objects/Comp_Adjustment__c/fields/Attributable_Goal__c.field-meta.xml
<CustomField>
    <fullName>Attributable_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attributable Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Comp Adjustments</relationshipLabel>
    <relationshipName>Comp_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>