unpackaged/main/default/objects/Comp_Adjustment__c/fields/Comp_Adjustment_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Comp_Adjustment_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comp Adjustment ID (case safe)</label>
    <type>Text</type>
</CustomField>