unpackaged/main/default/objects/Comp_Adjustment__c/fields/Manager_Department__c.field-meta.xml
<CustomField>
    <fullName>Manager_Department__c</fullName>
    <label>Manager Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>