unpackaged/main/default/objects/Comp_Adjustment__c/fields/Manager_Sourcing_Category__c.field-meta.xml
<CustomField>
    <fullName>Manager_Sourcing_Category__c</fullName>
    <label>Manager Sourcing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Sourcing_Category</valueSetName>
    </valueSet>
</CustomField>