unpackaged/main/default/objects/Comp_Adjustment__c/fields/Manager_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Manager_Subregion__c</fullName>
    <label>Manager Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>