unpackaged/main/default/objects/Comp_Adjustment__c/fields/Manager_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Manager_Subteam__c</fullName>
    <label>Manager Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>