unpackaged/main/default/objects/Comp_Adjustment__c/fields/Manager_Team__c.field-meta.xml
<CustomField>
    <fullName>Manager_Team__c</fullName>
    <label>Manager Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>