unpackaged/main/default/objects/Comp_Adjustment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comp Adjustments</relationshipLabel>
    <relationshipName>Comp_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>