unpackaged/main/default/objects/Comp_Adjustment__c/validationRules/Missing_owner_role.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_owner_role</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Owner_Role__c)</errorConditionFormula>
    <errorMessage>Owner Role required</errorMessage>
</ValidationRule>