unpackaged/main/default/objects/Comp_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Owner_Role__c</columns>
    <columns>Earn_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Campaign__c</columns>
    <columns>Amount__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Manager__c</columns>
    <columns>Manager_Role__c</columns>
    <columns>Comment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>