unpackaged/main/default/objects/Comp_Adjustment__c/listViews/Current_Year_Comp_Adjustmentrs.listView-meta.xml
<ListView>
    <fullName>Current_Year_Comp_Adjustmentrs</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Owner_Role__c</columns>
    <columns>Manager__c</columns>
    <columns>Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Earn_Date__c</columns>
    <columns>Earn_Month__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Earn_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <filters>
        <field>Earn_Quarter__c</field>
        <operation>equals</operation>
        <value>2023-Q4</value>
    </filters>
    <label>Current Year Adjustments</label>
</ListView>